# uncc_robo_lab

./: CMakeLists.txt  calibrate_overhead.cpp  calibrate_overhead.h
cam_calib/kinect_capture_image/: CMakeCache.txt
cam_calib/opencv_DisplayImage/: Makefile  cmake_install.cmake
cam_calib/transformation_estimation_displacedCam/: camera_to_robotWorld_tf.txt
cam_calib/transformation_estimation_fixedCam_chessboard/: CMakeLists.txt  README  transformation_estimation_fixedCam_chessboard.cpp
cam_calib/transformation_estimation_fixedCam_chessboard/scene_1_1_calib/: scene_1_1_calib_2d1.txt
cameras/cam_calib/ASIFT_exe/2/: matchings.txt
cameras/cam_calib/ASIFT_src/: matchings.txt
cameras/cam_calib/kinect_capture_image/: capture_image.cpp  cmake_install.cmake
cameras/cam_calib/opencv_DisplayImage/: DisplayImage
cameras/cam_calib/transformation_estimation_displacedCam/: transformation_estimation_displacedCam.h
cameras/cam_calib/transformation_estimation_fixedCam_chessboard/: Makefile  camera_to_robotWorld_tf.txt
cameras/kinect_calibrate/ASIFT_exe/1/: matchings.txt
cameras/kinect_calibrate/kinect_capture_image/: CMakeLists.txt  CMakeLists.txt~  Makefile  capture_image
cameras/kinect_calibrate/opencv_DisplayImage/: CMakeCache.txt
cameras/kinect_calibrate/transformation_estimation_displacedCam/: CMakeLists.txt  Makefile  transformation_estimation_displacedCam.cpp  updated_cameraOptical_to_robotWorld_tf.txt  updated_camera_to_robotWorld_tf.txt
cameras/kinect_calibrate/transformation_estimation_fixedCam_chessboard/: cameraOptical_to_robotWorld_tf.txt  chessboard_to_robotWrold_tf.txt
cameras/kinect_calibrate/transformation_estimation_fixedCam_chessboard/scene_1_1_calib/: scene_1_1_calib_3d1.txt
cameras/overhead_kinect/: CMakeLists.txt  calibrate  calibrate.cpp  cloud_viewer
costmap_files/: my_rolling_costmap.yaml  my_static_costmap.yaml  robot_amcl_costmap.rviz
mobile_robots/: ros_conf.sh
mobile_robots/costmap_files/: my_costmap_demo.launch  my_global_costmap_params.yaml  my_local_costmap_params.yaml
mobile_robots/launch/: minimal_obstacle.launch
mobile_robots/robot_ob/: .main_obstacle_twist.cpp.swp  CMakeLists.txt~  main_obstacle_twist.cpp~
mobile_robots/robot_ob/launch/: minimal_ramp.launch
overhead_kinect/: CMakeLists.txt  calibrate.h  calibrate_overhead.cpp  calibrate_overhead.h  capture-image.cpp  capture-image.h  capture_cloud  cloud_viewer.cpp
overhead_kinect/tmp/: test_segment_image.ppm
ramp_obstacle/: CMakeLists.txt  main_obstacle_twist.cpp  package.xml
ros_nav/: lab_map.pgm  my_rolling_costmap.yaml  my_static_costmap.yaml
