cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(transformation_estimation_displacedCam)

find_package(PCL 1.7 REQUIRED)
find_package( OpenCV REQUIRED )

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

add_executable (transformation_estimation_displacedCam transformation_estimation_displacedCam.cpp)
target_link_libraries (transformation_estimation_displacedCam ${PCL_LIBRARIES} ${OpenCV_LIBS})
